# yarngpt

./: .gitignore  MANIFEST.in  README.md  audiotokenizer.py  hello.py  pyproject.toml  requirements.txt
default_speakers/: azeez.json  emma.json  idera.json  joke.json  osagie.json  saheed.json  saheed2.json  test_new (1).json  zainab.json
default_speakers_local/: hausa_female2.json  hausa_male1.json  hausa_male2.json  igbo_female1.json  igbo_female2.json  igbo_male2.json  yoruba_female1.json  yoruba_female2.json  yoruba_male1.json  yoruba_male2.json
examples/: Prompt_yarngpt.ipynb  pyproject.toml
notebooks/: Merge_datasets.ipynb  Merge_datasets_local (1).ipynb  Yoruba_prepare_data_naij (2).ipynb  train_YarnGPT.ipynb  train_YarnGPT_local.ipynb
python-wrapper/: README.md  audiotokenizer.py  pyproject.toml  requirements.txt
python-wrapper/default_speakers/: Yoruba_prepare_data_naij (2).ipynb  chinenye.json  jude.json  regina.json  remi.json  tayo.json  umar.json
python-wrapper/default_speakers/.ipynb_checkpoints/: onye-checkpoint.json
python-wrapper/yarngpt/: __init__.py  core.py
yarngpt/: audiotokenizer.py
