[project]
name = "yarngpt"
version = "0.1.0"
description = "YarnGPT is a text-to-speech (TTS) model designed to synthesize Nigerian-accented English leveraging pure language modelling without external adapters or complex architectures, offering high-quality, natural, and culturally relevant speech synthesis for diverse applications"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

# Author details
authors = [
    { name = "Saheed Ayanniyi", email = "your.email@example.com" }
]

# Repository details
[project.urls]
Homepage = "https://huggingface.co/saheedniyi/YarnGPT"
Repository = "https://github.com/saheedniyi02/yarngpt"
Issues = "https://github.com/saheedniyi02/yarngpt/issues"

[tool.uv.workspace]
members = ["examples"]
