[project]
name = "yarngpt"
version = "0.1.0"
description = "YarnGPT is a text-to-speech (TTS) model designed to synthesize Nigerian-accented English leveraging pure language modelling without external adapters or complex architectures, offering high-quality, natural, and culturally relevant speech synthesis for diverse applications"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "inflect>=7.5.0",
    "outetts==0.2.3",
    "torch>=2.6.0",
    "torchaudio>=2.6.0",
    "transformers==4.47.1",
    "uroman>=1.3.1.1",
]


# Author details
authors = [
    { name = "Saheed Ayanniyi", email = "your.email@example.com" }
]

# Repository details
[project.urls]
Homepage = "https://huggingface.co/saheedniyi/YarnGPT"
Repository = "https://github.com/saheedniyi02/yarngpt"
Issues = "https://github.com/saheedniyi02/yarngpt/issues"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[tool.setuptools.packages.find]
where = ["."]
include = ["yarngpt", "yarngpt.*"] 
exclude = ["notebooks*", "examples*", "default_speakers*", "default_speakers_local*"]
